--- a/_posts/2024-10-11-test.md
+++ b/_posts/2024-10-11-test.md
@@ -4,7 +4,10 @@ date: 2024-10-11 17:32:00 -0600
 categories: [testing, basic]
 tags: [posts, tests]     # TAG names should always be lowercase
 author: eric
+media_subpath: /assets/img/
 ---
 
 # Hi this is a test!
+
+![img-description](parkoct2024.png)
 
