--- a/_posts/2025-06-08-commute.md
+++ b/_posts/2025-06-08-commute.md
@@ -57,9 +57,13 @@ While the path feels a little remote and exposed, it's a quick crossing on an eb
 
 *Wide open path.*
 
-Then it's another couple miles on the approach paths, before navigating a mix of bike lanes, off-street paths, and bridges in Emeryville. The whole ebike trip reliably takes me [under 25 minutes](https://www.strava.com/activities/14672743314/analysis) to travel 6.5 miles, though I build in a 15min buffer in case I get a flat. So that's 40 minutes total – 25 minutes faster than the transit option.
+Then it's another couple miles on the approach paths, before navigating a mix of bike lanes, off-street paths, and bridges in Emeryville. The whole ebike trip reliably takes me under 25 minutes to travel 6.5 miles, though I build in a 15min buffer in case I get a flat. So that's 40 minutes total – 25 minutes faster than the transit option.
+
+<div class="strava-embed-placeholder" data-embed-type="activity" data-embed-id="14672743314" data-style="standard" data-from-embed="false"></div><script src="https://strava-embeds.com/embed.js"></script>
 
 ![Wide bike and pedestrian path along Interstate 80 just east of the Bay Bridge, approaching the 80/880/580 interchange.](approach.png)
+
+*Along the freeways in the morning.*
 
 ### The Train
 
