--- a/_posts/2025-11-25-ferry.md
+++ b/_posts/2025-11-25-ferry.md
@@ -15,7 +15,7 @@ The [Treasure Island Ferry](https://tisf.com/ferry-service/?bookingTypeId=110585
 
 The current ferry service began operating in [March 2022](https://media.api.sf.gov/documents/030922_Directors_Report_0.pdf).
 
-![Photo taken near sunset of orange-topped ferry boat at the Treasure Island terminal, with a a palm tree in the foreground and the Bay Bridge in the background.](ferry.jpg)
+![Photo taken near sunset of orange-topped ferry boat at the Treasure Island terminal, with a a palm tree in the foreground and the Bay Bridge in the background.](ferry.jpeg)
 
 *Infrastructure and sunsets.*
 
@@ -53,7 +53,7 @@ It does not, however, have a GTFS Realtime feed. So those maps and tools display
 
 While the ferry is generally reliable, stuff can and does happen to disrupt service. Trips are occasionally cancelled or delayed due to weather. GTFS Realtime can also communicate more complex service information. Recently PROP SF substituted a different, smaller boat for several days. The ferry kept to its schedule, but the replacement boat had much less bike capacity. I saw several riders get stranded at the dock on Treasure Island when their bikes wouldn't fit; they seemed to be on a long recreational ride and may have planned differently if they knew there would be less bike space than usual.
 
-![Single-level ferry boat on the bay with a concrete seawall in the foreground.](temp_ferry.jpg)
+![Single-level ferry boat on the bay with a concrete seawall in the foreground.](temp_ferry.jpeg)
 
 *The backup boat.*
 
@@ -89,7 +89,7 @@ The ferry is usually not that busy, but special events and busy tourist days can
 
 The ferry features heavily in marketing materials from the developer.
 
-![Screenshot of https://www.490palmssf.com/ showing rendering of future development on Treasure Island with ferry service highlighted](490palms.png)
+![Screenshot of https://www.490palmssf.com/ showing rendering of future development on Treasure Island with ferry service highlighted](490palms.jpeg)
 
 *You'll note the emphasis is on span over frequency.*
 
