Fix link formatting in ferry.md
Updated link formatting for clarity and consistency.

--- a/_posts/2025-11-25-ferry.md
+++ b/_posts/2025-11-25-ferry.md
@@ -71,7 +71,7 @@ A single crew member is tasked with taking all those payments using a single iPa
 
 Not taking Clipper is understandable. But [Clipper 2.0](https://mtc.ca.gov/news/next-generation-clipper-set-sail-december) is finally set to roll out on December 10, giving riders the ability to tap to ride with a credit/debit card or mobile wallet across the Bay Area. Once this happens it would be great if the Treasure Island Ferry offered standalone tap to ride validators at each terminal – a simple and fast option that would free up the crew to assist other passengers in the payment and boarding process. Even without becoming part of the Clipper system, this would make it seem more seamless and aligned with other transit operators.
 
-*If you're a transit operator and curious about [GTFS Realtime](https://www.camobilitymarketplace.org/how-to/gtfs-rt) and [open payments](https://www.camobilitymarketplace.org/go-contactless), https://www.camobilitymarketplace.org/ has some good info and, optionally, state-negotiated contracts. I do work with Cal-ITP.*
+*If you're a transit operator and curious about [GTFS Realtime](https://www.camobilitymarketplace.org/how-to/gtfs-rt) and [open payments](https://www.camobilitymarketplace.org/go-contactless), [https://www.camobilitymarketplace.org/](https://www.camobilitymarketplace.org/) has some good info and, optionally, state-negotiated contracts. I do work with Cal-ITP.*
 
 ### Ditch the Gap
 
